games are isolated from each other. global variables in game class caused an error: The Miller was only read from the last game.

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ $(document).ready(function(){
   showIt();
 
 
-  aDieMitspieler = new Array(new Array("kI3/Laura","Laura","rechts"),new Array("kI3/Laura","Laura2","mitte"),new Array("ki3/Laura","Laura3","links"));
+  aDieMitspieler = new Array(new Array("kI3/Laura","Laura","rechts"),new Array("kI3/Laura","Laura2","mitte"),new Array("kI3/Laura","Laura3","links"));
   strg_spielbeginn(init_SpielID,init_oBlatt,aDieMitspieler,MOE_SPIELTYP_Ramsch);
   
   $("#spielfeld").delay(1500);
