--- a/index_online.html
+++ b/index_online.html
@@ -364,7 +364,7 @@ $(document).ready(function(){
 
 
   aDieMitspieler = new Array(new Array(1255412563,"Ralf","rechts"),new Array("kI2/Clara","Clarissa","mitte"),new Array(748874568412658,"Kim","links"));
-  strg_spielbeginn(init_SpielID,init_oBlatt,aDieMitspieler,MOE_SPIELTYP_Ramsch,"Einzelspiel");
+  strg_spielbeginn(0,init_oBlatt,aDieMitspieler,MOE_SPIELTYP_Ramsch,"Einzelspiel");
   
   $("#spielfeld").delay(1500);
   
